--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -4,7 +4,7 @@ on:
   push:
     tags:
       - "*"
-  workflow_dispatch: []
+  workflow_dispatch: {}
 
 env:
   CPM_SOURCE_CACHE: ${{ github.workspace }}/cpm_modules
