--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - master
       - main
-  workflow_dispatch: []
+  workflow_dispatch: {}
 
 env:
   CTEST_OUTPUT_ON_FAILURE: 1
